修复图片路径问题

--- a/src/main/webapp/demo.html
+++ b/src/main/webapp/demo.html
@@ -13,8 +13,8 @@
 </div>
 <script>
     var option = new Object();
-	option.original = "img/originalImage.jpg";
-	option.target = "img/targetImage.png";
+	option.original = "images/verification/originalImage.jpg";
+	option.target = "images/verification/targetImage.png";
     $("#codeDiv").imgcode(option);
 </script>
 
